Adjust section name to PROJECTS
Projects is a more appropriate name for the section, as these are things I am doing in my spare time, rather than something I am being compensated for.

--- a/index.html
+++ b/index.html
@@ -346,12 +346,12 @@
 	</div><!--/ #skillswrap -->
 
 	<section id="work" name="work"></section>
-	<!--PORTFOLIO DESCRIPTION -->
+	<!--PROJECTS DESCRIPTION -->
 	<div class="container desc">
 		<div class="row">
 			<br/>
 			<div class="col-lg-2 col-lg-offset-1">
-				<h5>PORTFOLIO</h5>
+				<h5>PROJECTS</h5>
 			</div>
 			<div class="col-lg-6">
 				<p><img class="img-responsive" src="./img/port01.jpg" alt=""></p>
