--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-12">
-					<img class="img-circle" src="./img/profile-pic.jpg">
+					<img class="img-circle" id="profilepic" src="./img/profile-pic.jpg">
 				</div><!--/.col-lg-12 -->
 			</div><!--/.row -->
 			<div class="row centered">
