--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 					<p class="bigicon">
 						<a href="https://www.facebook.com/brooks.tawil"><i class="icon-facebook"></i></a>
 						<a href="https://www.instagram.com/tawilboy/"><i class="icon-instagram"></i></a>
-						<a href="github.com/brookstawil"><i class="icon-github"></i></a>
+						<a href="https://github.com/brookstawil"><i class="icon-github"></i></a>
 						<a href="https://www.linkedin.com/in/brookstawil/"><i class="icon-linkedin"></i></a>
 					</p>
 				</div>
