Fix spelling mistake

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 					<p>RUTGERS THETA TAU <br/>
 					<sm>MAY 2017 - PRESENT</sm><br/>
 					</p>
-				<p>As webmaster for the Omicron Delta chapter of Theta Tau, it is my responsibility to design, deploy, and mainta8in our official chapter website. After wireframing and pitching ideas, the website was constructed using HTML/CSS, with jQuery for client-side scripting and Bootstrap for a seamless front end user experience.<br/><br/>
+				<p>As webmaster for the Omicron Delta chapter of Theta Tau, it is my responsibility to design, deploy, and maintain our official chapter website. After wireframing and pitching ideas, the website was constructed using HTML/CSS, with jQuery for client-side scripting and Bootstrap for a seamless front end user experience.<br/><br/>
 					<i class="icon-code"></i> Web Development
 				</p>
 			</div>
