--- a/index.html
+++ b/index.html
@@ -94,17 +94,7 @@
 				<h5>EDUCATION</h5>
 			</div>
 			<div class="col-lg-6">
-				<p><t>B.E. in Electrical and Computer Engineering</t><br/>
-					Rutgers University <br/>
-				</p>
-			</div>
-			<div class="col-lg-3">
-				<p><sm>GRADUATING IN MAY 2017</sm><br/>
-					<imp><sm>IN PROGRESS</sm></imp>
-				</p>
-			</div>
-			<div class="col-lg-6 col-lg-offset-3">
-				<p><t>B.S. in Computer Science</t><br/>
+				<p><t>B.S. in Electrical and Computer Engineering, Computer Science</t><br/>
 					Rutgers University <br/>
 				</p>
 			</div>
@@ -167,6 +157,11 @@
 	<!--SKILLS DESCRIPTION -->
 	<div id="skillswrap">
 		<div class="container">
+			<div class="row">
+				<div class="col-sm-9 col-sm-offset-3 text-center">
+					<h1>RELATIVE SKILLS</h1>
+				</div>
+			</div>
 			<div class="row">
 					<div class="col-sm-2 col-sm-offset-1">
 						<h5>LANGUAGES</h5>
