Update work experience and skills
Skills have been reformatted and upadated

Work experience now includes Citi

Info updated as of 9/14/18

--- a/index.html
+++ b/index.html
@@ -97,6 +97,18 @@
 				<h5>WORK</h5>
 			</div>
 			<div class="col-lg-6">
+				<p><t>Summer Technology Analyst</t><br>
+					Citigroup <br>
+				</p>
+				<p>Served as a Full Stack MEAN developer within Investor Services Technology division on a team of business analysts and developers. This involved leading and completing a project related to migrating from AngularJS to Angular 5 and present results to senior management. As a result, I successfully developed a feature that was tested in QA, UAT and finally pushed into production in the most recent release
+					</p>
+			</div>
+			<div class="col-lg-3">
+				<p><sm>JUNE 2018 - AUGUST 2018 <br>
+					NEW YORK, NY <br>
+				</sm></p>
+			</div>
+			<div class="col-lg-6 col-lg-offset-3">
 				<p><t>Junior Developer</t><br>
 					Kedma Solar <br>
 				</p>
@@ -143,18 +155,32 @@
 			<div class="col-lg-2 col-lg-offset-1">
 				<h5>SKILLS AND COURSEWORK</h5>
 			</div>
-			<div class="col-lg-6">
-				<p><t>Languages</t><br>
-					Java, C/C++, Javascript, HTML/ CSS, Python, MATLAB, LaTeX, MIPS, Ruby
+			<div class="col-lg-3">
+				<p><t>Languages(Advanced)</t><br>
+					Python, Typescript, Javascript, HTML, Java, C/C+
 				</p>
-				<p><t>Frameworks and Databases</t><br>
-					Bootstrap, Django, Angular JS, Node.js
+				<p><t>Tools(Advanced)</t><br>
+					Express, Node, Angular, Bootstrap, MEAN stack
 				</p>
-				<p><t>Relevant Computer Science Courses</t><br>
-					Data Structures, Algorithms, Systems Programming, Internet Technology, Intro to Artificial Intelligence, Discrete Structures, Network Security
+				<p><t>Infrastructure</t><br>
+					Google Cloud, AWS, Raspberry Pi, Arduino
 				</p>
-				<p><t>Relevant Computer Engineering Courses</t><br>
-					Circuits I/II, Digital Electronics, Probability and Random Processes, Computer Architecture and Assembly Language, Software Engineering, Digital Electroincs, Intro to Machine Learning
+				<p><t>Computer Science Courses</t><br>
+					Data Structures, Algorithms, Systems Programming, Internet Technology, Intro to Artificial Intelligence, Discrete Structures, Information and Network Security
+				</p>
+			</div>
+			<div class="col-lg-3">
+				<p><t>Languages(Intermediate)</t><br>
+					MATLAB, LaTeX, Go, MIPS, C#, Rust, SQL
+				</p>
+				<p><t>Tools(Intermediate)</t><br>
+					MongoDB, Django, React, jQuery, Firebase
+				</p>
+				<p><t>Developer Tools</t><br>
+					Github, VS Code, Android Studio, Jira, Bitbucket
+				</p>
+				<p><t>Computer Engineering Courses</t><br>
+					Circuits I/II, Digital Electronics, Intro to Machine Learning, Probability, Computer Architecture and Assembly Language, Software Engineering, Digital Electroincs
 				</p>
 			</div>
 		</div><!--/.row -->
@@ -229,10 +255,10 @@
 				<p><img class="img-responsive" src="./img/port02.jpg" alt=""></p>
 			</div>
 			<div class="col-lg-3">
-					<p>RUTGERS THETA TAU WEBSITE<br>
+					<p>WEB DEVELOPEMENT<br>
 					<sm>MAY 2017 - PRESENT</sm><br>
 					</p>
-				<p>As webmaster for the Omicron Delta chapter of Theta Tau, it is my responsibility to design, deploy, and maintain our official chapter website. After wireframing and pitching ideas, the website was constructed using HTML/CSS, with jQuery for client-side scripting and Bootstrap for a seamless front end user experience.<br><br>
+				<p>I do work as a web developer on the side, both for the organizations that I am a part of, and for friends and family. Its nice to have a small source of income during college, but in reality I gain more from growing as a developer and using tools used in industry. Check out some of my work: <a style="color: blue" href="http://thetatau.rutgers.edu/">Rutgers Theta Tau</a><br><br>
 					<i class="icon-code"></i> Web Development
 				</p>
 			</div>
