redirect to linked in

--- a/index.html
+++ b/index.html
@@ -1,308 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Resume Website">
-    <meta name="author" content="Brooks Tawil">
-    <link rel="shortcut icon" href="./img/favicon.ico">
-
-    <title>Brooks Tawil</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="./css/bootstrap.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="./css/main.css" rel="stylesheet">
-	
-	<!-- FontAwesome -->
-	<link rel="stylesheet" href="./css/font-awesome.min.css">
-	
-	<!-- Google Fonts -->
-    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-	
-	<!-- Javascript -->
-    <script src="./js/jquery.min.js"></script>
-    <script src="./js/Chart.js"></script>
-
+    <meta http-equiv="refresh" content="0; URL='https://www.linkedin.com/in/brookstawil/'" />
   </head>
-
-  <body data-spy="scroll" data-offset="0" data-target="#nav">
-	
-	<div id="headerwrap">
-		<div class="container">
-			<div class="row centered">
-				<div class="col-lg-12">
-					<img class="img-circle" id="profilepic" src="./img/profile-pic.jpg">
-				</div><!--/.col-lg-12 -->
-			</div><!--/.row -->
-			<div class="row centered">
-				<div class="col-lg-12">
-					<h1>Brooks Tawil</h1>
-					<h3>Computer Engineering Student | tawilbrooks@gmail.com</h3>
-				</div><!--/.col-lg-12 -->
-			</div><!--/.row -->
-		</div><!--/.container -->
-	</div><!--/.#headerwrap -->
-
-	<section id="about" name="about"></section>
-	<div id="intro">
-		<div class="container">
-			<div class="row">
-				<br>
-				<div class="col-lg-2 col-lg-offset-1">
-					<h5>ABOUT</h5>
-				</div>
-				<div class="col-lg-6">
-					<p>As a growing engineer and developer, I have faced and overcome challanges by taking them head-on. I chose an education in Electrical and Computer Engineering not because it would be easy, but because I knew I could learn a lot about a subject I am passionate about. I spend my time in the school wisely, and have developed a better sense of my education and how to keep growing in all aspects of my life. Through my higher education, I have involved myself in pursuits outside of the classroom including research, engineering organizations, intramural sports, and fraternity life.</p>
-				</div>
-				<div class="col-lg-3">
-					<imp><a href="./BrooksTawilResume.pdf" target="_blank"><i class="icon-file-text"></i>DOWNLOAD RESUME</a></imp>
-				</div>
-			</div><!--/.row -->
-		</div><!--/.container -->
-	</div><!--/ #intro -->
-
-	<section id="resume" name="resume"></section>
-	<!--EDUCATION DESCRIPTION -->
-	<div class="container desc">
-		<div class="row">
-			<br>
-			<div class="col-lg-2 col-lg-offset-1">
-				<h5>EDUCATION</h5>
-			</div>
-			<div class="col-lg-6">
-				<p><t>B.S. in Electrical and Computer Engineering<br>
-					B.S. in Computer Science</t><br>
-					Rutgers University <br>
-					GPA: 3.72 <br>
-				</p>
-			</div>
-			<div class="col-lg-3">
-				<p><sm>GRADUATING IN MAY 2019</sm><br>
-					<imp><sm>IN PROGRESS</sm></imp>
-				</p>
-			</div>
-		</div><!--/.row -->
-		<br>
-		<hr>
-	</div><!--/.container -->
-	
-	<!--WORK DESCRIPTION -->
-	<div class="container desc">
-		<div class="row">
-			<br>
-			<div class="col-lg-2 col-lg-offset-1">
-				<h5>WORK</h5>
-			</div>
-			<div class="col-lg-6">
-				<p><t>Summer Technology Analyst</t><br>
-					Citigroup <br>
-				</p>
-				<p>Served as a Full Stack MEAN developer within Investor Services Technology division on a team of business analysts and developers. This involved leading and completing a project related to migrating from AngularJS to Angular 5 and present results to senior management. As a result, I successfully developed a feature that was tested in QA, UAT and finally pushed into production in the most recent release
-					</p>
-			</div>
-			<div class="col-lg-3">
-				<p><sm>JUNE 2018 - AUGUST 2018 <br>
-					NEW YORK, NY <br>
-				</sm></p>
-			</div>
-			<div class="col-lg-6 col-lg-offset-3">
-				<p><t>Junior Developer</t><br>
-					Kedma Solar <br>
-				</p>
-				<p>Worked alongside CTO on PCB design project as well as programming front-end interfaces using Android and Ruby on Rails. The PCB design project involved designing frequency filters, debugging and revising PCB designs for power meter using Eagle PCB. The front-end project consisted of wireframing, implementing and deploying new features to company Android application used by users and technicians in the field.</p>
-			</div>
-			<div class="col-lg-3">
-				<p><sm>MAY 2017 - AUGUST 2017 <br>
-					TEL AVIV, IL <br>
-					<imp><a href="./ProjectProposal.pdf" target="_blank"><i class="icon-file-text"></i>  PROJECT PROPOSAL</a></imp>
-				</sm></p>
-			</div>
-			<div class="col-lg-6 col-lg-offset-3">
-				<p><t>Research Assistant</t><br>
-					Human and Computer Interactions Lab<br>
-				</p>
-				<p>Worked alongside Prof. Janne Lindqvist in the Human and Compter Interactions Lab on Rutgers on two projects that resulted in 5000+ word technical reports. The first project focused on running usability studies and tests on the Windows Hello Bio-security protocol that involves Iris, Fingerprint and 3D facial expression recognition for security. The second project centered around developiong a working android keyboard application and running live field tests on user behavior with regards to the use of the keyboard.</p>
-			</div>
-			<div class="col-lg-3">
-				<p><sm>JANUARY 2016 - MAY 2017 <br>
-					PISCATAWAY, NJ <br>
-					<imp><a href="./BrooksTawilTechReportFall2016.pdf" target="_blank"><i class="icon-file-text"></i>  TECHNICAL REPORT FALL 2016</a></imp><br>
-					<imp><a href="./BrooksTawilTechReportSpring2017.pdf" target="_blank"><i class="icon-file-text"></i>  TECHNICAL REPORT SPRING 2017</a></imp>
-				</sm></p>
-			</div>
-			<div class="col-lg-6 col-lg-offset-3">
-					<p><t>Reserach and Developement Intern</t><br>
-						Tabush Group<br>
-					</p>
-					<p>Researched and developed software components related to hosting virtualized instances of a client’s desktop in an offsite environment. This research usually centered around software components related to hosting virtualized instances of a client’s desktop in an offsite environment, as well as the costing of using such solutions.</p>
-			</div>
-			<div class="col-lg-3">
-				<p><sm>MAY 2015 - AUGUST 2015 <br>
-					NEW YORK, NY </sm></p>
-			</div>
-		</div><!--/.row -->
-		<br>
-		<hr>
-	</div><!--/.container -->
-
-	<!--SKILLS DESCRIPTION -->
-	<div class="container desc">
-		<div class="row">
-			<br>
-			<div class="col-lg-2 col-lg-offset-1">
-				<h5>SKILLS AND COURSEWORK</h5>
-			</div>
-			<div class="col-lg-3">
-				<p><t>Languages(Advanced)</t><br>
-					Python, Typescript, Javascript, HTML, Java, C/C+
-				</p>
-				<p><t>Tools(Advanced)</t><br>
-					Express, Node, Angular, Bootstrap, MEAN stack
-				</p>
-				<p><t>Infrastructure</t><br>
-					Google Cloud, AWS, Raspberry Pi, Arduino
-				</p>
-				<p><t>Computer Science Courses</t><br>
-					Data Structures, Algorithms, Systems Programming, Internet Technology, Intro to Artificial Intelligence, Discrete Structures, Information and Network Security
-				</p>
-			</div>
-			<div class="col-lg-3">
-				<p><t>Languages(Intermediate)</t><br>
-					MATLAB, LaTeX, Go, MIPS, C#, Rust, SQL
-				</p>
-				<p><t>Tools(Intermediate)</t><br>
-					MongoDB, Django, React, jQuery, Firebase
-				</p>
-				<p><t>Developer Tools</t><br>
-					Github, VS Code, Android Studio, Jira, Bitbucket
-				</p>
-				<p><t>Computer Engineering Courses</t><br>
-					Circuits I/II, Digital Electronics, Intro to Machine Learning, Probability, Computer Architecture and Assembly Language, Software Engineering, Digital Electroincs
-				</p>
-			</div>
-		</div><!--/.row -->
-		<br>
-		<hr>
-	</div><!--/.container -->
-
-	<!--AFFILIATIONS DESCRIPTION -->
-	<div class="container desc">
-		<div class="row">
-			<br>
-			<div class="col-lg-2 col-lg-offset-1">
-				<h5>AFFILIATIONS</h5>
-			</div>
-			<div class="col-lg-6">
-				<p><t>Theta Tau - Co-ed Professional Engineering Fraternity</t><br>
-					President <br>
-				</p>
-				<p>Serve as the leader of the premier professional engineering fraternity at Rutgers. This includes representing the fraternity at events, conventions, and to other organizations on campus. Meetings and committee sessions all fall under my responsibility to ensure that everything is working smoothly, and that goals are created after and accomplished in all aspects of brotherhood, professionalism, and community service.</p>
-			</div>
-			<div class="col-lg-3">
-				<p><sm>MAY 2018 - PRESENT <br>
-					PISCATAWAY, NJ <br>
-				</sm></p>
-			</div>
-			<div class="col-lg-6 col-lg-offset-3">
-				<p><t>Tau Beta Pi - Engineering Honors Society</t><br>
-					Vice President<br>
-				</p>
-				<p>Organize and coordinate our efforts for the semester alongside the other executive board members. This includes planning events for the engineering community, the Rutgers campus events such as Rutgers Day, as well as recruitment of eligible members. Additionally, reports and forms that are submitted to the national organization are all approved by myself and the president, to ensure correct information is given and everything is in order.</p>
-			</div>
-			<div class="col-lg-3">
-				<p><sm>DECEMBER 2017 - PRESENT <br>
-					PISCATAWAY, NJ <br>
-				</sm></p>
-			</div>
-			<div class="col-lg-6 col-lg-offset-3">
-					<p><t>Rutgers Hillel</t><br>
-						Member<br>
-					</p>
-					<p>Pariticpated in multiple events run but the Rutgers hillel including Birthright. Additionally I assisted in educating others by serving as an educator in the Israel 101 program.</p>
-			</div>
-			<div class="col-lg-3">
-				<p><sm>JANUARY 2016 - PRESENT <br>
-					NEW BRUNSWICK, NJ </sm></p>
-			</div>
-		</div><!--/.row -->
-		<br>
-		<hr>
-	</div><!--/.container -->
-	
-	
-	<!--PROJECTS DESCRIPTION -->
-	<div class="container desc">
-		<div class="row">
-			<br>
-			<div class="col-lg-2 col-lg-offset-1">
-				<h5>PROJECTS</h5>
-			</div>
-			<div class="col-lg-6">
-				<p><img class="img-responsive" src="./img/port01.jpg" alt=""></p>
-			</div>
-			<div class="col-lg-3">
-				<p>SWARM ROBOTICS <br>
-				<sm>AUGUST 2017 - PRESENT</sm></p>
-			<p>Swarm robotics centers around the idea that if two is better than one, than many must be even better. This project sets out to test this by reworking existing open source swarm robotics projects by designing, printing and constructing a custom robotics platform to solve mazes and puzzles.<br><br>
-				<i class="icon-cogs"></i> Robotics
-			</p>
-			</div>
-
-			<div class="col-lg-6 col-lg-offset-3">
-				<p><img class="img-responsive" src="./img/port02.jpg" alt=""></p>
-			</div>
-			<div class="col-lg-3">
-					<p>WEB DEVELOPEMENT<br>
-					<sm>MAY 2017 - PRESENT</sm><br>
-					</p>
-				<p>I do work as a web developer on the side, both for the organizations that I am a part of, and for friends and family. Its nice to have a small source of income during college, but in reality I gain more from growing as a developer and using tools used in industry. Check out some of my work: <a style="color: blue" href="http://thetatau.rutgers.edu/">Rutgers Theta Tau</a><br><br>
-					<i class="icon-code"></i> Web Development
-				</p>
-			</div>
-		</div><!--/.row -->
-		<br>
-		<br>
-	</div><!--/.container -->
-	
-
-	<section id="contact" name="contact"></section>
-	<!--FOOTER DESCRIPTION -->
-	<div id="footwrap">
-		<div class="container">
-			<div class="row">
-				<br>
-				<div class="col-lg-2 col-lg-offset-1">
-					<h5>CONTACT</h5>
-				</div>
-				<div class="col-lg-6">
-					<p><t>Email</t><br>
-						tawilbrooks@gmail.com <br>
-						brooks.tawil@rutgers.edu <br>
-					</p>
-					<p><t>Address</t><br>
-						71 Norwood Ave <br>
-						Deal, NJ 07723 <br>
-					</p>
-					<p><t>Cell Phone</t><br>
-						(732) 887-3263 <br>
-					</p>
-				</div>
-				<div class="col-lg-3">
-					<p>SOCIAL LINKS</p>
-					<p class="bigicon">
-						<a href="https://www.facebook.com/brooks.tawil"><i class="icon-facebook"></i></a>
-						<a href="https://www.instagram.com/tawilboy/"><i class="icon-instagram"></i></a>
-						<a href="https://github.com/brookstawil"><i class="icon-github"></i></a>
-						<a href="https://www.linkedin.com/in/brookstawil/"><i class="icon-linkedin"></i></a>
-					</p>
-				</div>
-			</div><!--/.row -->
-		</div><!--/.container -->
-	</div><!--/ #footer -->
-
-    <script src="./js/bootstrap.js"></script>
-  </body>
+  <body></body>
 </html>
