--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="refresh" content="0; URL='https://linktr.ee/BrooksTall" />
+    <meta http-equiv="refresh" content="0; URL='https://www.linkedin.com/in/brookstawil/" />
   </head>
   <body></body>
 </html>
